feat: layout manager added

--- a/packages/layout/..flat.md
+++ b/packages/layout/..flat.md
@@ -1,5 +1,11 @@
 # Contents of . source tree
 
+## File: pnpm-lock.yaml
+
+```yaml
+
+```
+
 ## File: package.json
 
 ```json
@@ -668,6 +674,11 @@ export class AttributeDefinitions {
 ```css
 /* === Base FlexLayout Styles (Adapted from gray.css) === */
 
+:root {
+  --tab-curve-size: 10px;
+  --tab-border-width: 1px;
+}
+
 .flexlayout__layout {
   left: 0;
   top: 0;
@@ -934,9 +945,11 @@ export class AttributeDefinitions {
 
 /* CHANGE 3: Adjust Tab Bar Outer for Toolbar positioning */
 .flexlayout__tabset_tabbar_outer_top {
-  height: 38px; /* Match button height + border */
-  border-bottom: 1px solid var(--border); /* Use standard border */
+  height: 40px; /* Match button height + border */
+  border-bottom: var(--tab-border-width) solid var(--border);
   background-color: var(--sidebar) !important; /* Use sidebar bg for tab bar */
+  position: relative; /* Needed if pseudo-elements relate to it */
+  z-index: 1; /* Behind selected tab */
 }
 
 .flexlayout__tabset_tabbar_outer_bottom {
@@ -944,13 +957,13 @@ export class AttributeDefinitions {
   border-top: 1px solid var(--border);
 }
 
-/* CHANGE 3: Ensure Inner Tab Bar allows Toolbar at end */
 .flexlayout__tabset_tabbar_inner {
   position: relative;
   box-sizing: border-box;
   display: flex;
-  flex-grow: 1; /* Takes up available space before toolbar */
-  overflow: hidden; /* Handles tab overflow */
+  flex-grow: 1;
+  overflow: hidden;
+  height: 100%;
 }
 
 /* Tab Container - Padding overridden later */
@@ -1488,6 +1501,7 @@ export class AttributeDefinitions {
   background-color: var(--accent);
   color: var(--accent-foreground);
   border-color: var(--border); /* Show border on hover */
+  border-bottom-color: transparent;
   z-index: 3; /* Bring hover slightly forward */
   margin-bottom: -1px; /* Ensure it aligns like selected */
   /* Match selected radius on hover */
@@ -1506,15 +1520,71 @@ export class AttributeDefinitions {
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
   /* Add borders */
-  border: 1px solid var(--border);
+  border: var(--tab-border-width) solid var(--border);
   border-bottom: none; /* No bottom border, sits on tab bar */
   /* Ensure it sits correctly relative to the tab bar */
-  margin-bottom: -1px; /* Overlap the tab bar's bottom border */
+  margin-bottom: calc(-1 * var(--tab-border-width));
+  position: relative;
 }
 
-/* REMOVED: Curve pseudo-elements are replaced by borders */
-/* .flexlayout__tab_button--selected::before, */
-/* .flexlayout__tab_button--selected::after { ... } */
+.flexlayout__tab_button--selected::before,
+.flexlayout__tab_button--selected::after {
+  content: "";
+  position: absolute;
+  bottom: calc(
+    -1 * var(--tab-border-width)
+  ); /* Position relative to the *visual* bottom including margin */
+  width: var(--tab-curve-size);
+  height: var(--tab-curve-size);
+  /* Draw the curve using radial gradient:
+     - Start transparent (or background color) up to the border line
+     - Draw the border color for its width
+     - Fill the rest with the tab bar color to hide it */
+  background: radial-gradient(
+    circle,
+    transparent 0,
+    transparent calc(var(--tab-curve-size) - var(--tab-border-width)),
+    /* Inner edge of border */ var(--border)
+      calc(var(--tab-curve-size) - var(--tab-border-width)),
+    /* Start border */ var(--border) var(--tab-curve-size),
+    /* End border */ var(--sidebar) var(--tab-curve-size)
+      /* Fill remaining space */
+  );
+  z-index: 1; /* Sit below tab content, above tab bar maybe? - adjust if needed*/
+}
+
+.flexlayout__tab_button--selected::before {
+  left: calc(-1 * var(--tab-curve-size));
+  /* Gradient origin: bottom right corner of the pseudo-element box */
+  background-image: radial-gradient(
+    circle at 100% 100%,
+    /* Bottom Right */ transparent 0,
+    transparent calc(var(--tab-curve-size) - var(--tab-border-width)),
+    var(--border) calc(var(--tab-curve-size) - var(--tab-border-width)),
+    var(--border) var(--tab-curve-size),
+    var(--sidebar) var(--tab-curve-size) /* Match tab bar bg */
+  );
+}
+
+.flexlayout__tab_button--selected::after {
+  right: calc(-1 * var(--tab-curve-size));
+  /* Gradient origin: bottom left corner of the pseudo-element box */
+  background-image: radial-gradient(
+    circle at 0% 100%,
+    /* Bottom Left */ transparent 0,
+    transparent calc(var(--tab-curve-size) - var(--tab-border-width)),
+    var(--border) calc(var(--tab-curve-size) - var(--tab-border-width)),
+    var(--border) var(--tab-curve-size),
+    var(--sidebar) var(--tab-curve-size) /* Match tab bar bg */
+  );
+}
+
+.flexlayout__tab_button_content,
+.flexlayout__tab_button_leading,
+.flexlayout__tab_button_trailing {
+  position: relative;
+  z-index: 2; /* Ensure content is above the ::before/::after curves */
+}
 
 /* Tab Content Area */
 .flexlayout__tab_content {
@@ -1522,11 +1592,8 @@ export class AttributeDefinitions {
     --background
   ); /* Ensure content area uses main background */
   /* Bottom corners rounded, top corners are square to meet tab */
-  border-radius: 0 0 var(--radius) var(--radius);
   overflow: hidden; /* Clip content */
   padding: 1rem; /* Example padding */
-  border: 1px solid var(--border); /* Add border around content */
-  border-top: none; /* Top border is visually provided by the selected tab */
   position: relative;
   z-index: 1; /* Below tabs */
   margin-top: 0; /* Align directly below tab bar bottom border */
